--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,8 @@ jobs:
 
       - name: Build project
         run: npm run build # Run the build command to create the static 'dist' folder
+        env:
+          VITE_BASE_URL: /SherLockWeb3GameonSolana/ # Set the correct base path for GitHub Pages
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3 # Use the peaceiris action for deployment
