--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "private": true,
   "version": "0.1.0",
   "type": "module",
+  
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-    },
-  "dependencies": {
+  "dev": "vite",
+  "build": "npm run build -- vite build",
+  "preview": "vite preview"
+},
+      "dependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@solana/wallet-adapter-base": "^0.9.27",
