--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "0.1.0",
   "type": "module",
   
-  "scripts": {
+"scripts": {
   "dev": "vite",
-  "build": "npm run build -- vite build",
+  "build": "vite build",
   "preview": "vite preview"
 },
       "dependencies": {
