--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,12 +6,6 @@ on:
     branches:
       - main  # Set the branch that will trigger the deployment
 
-# Add this permissions block
-permissions:
-  contents: write # This gives the workflow permission to write to your repository
-  pages: write # This gives the workflow permission to create a Pages deployment
-  id-token: write # This is required for authentication
-
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest  # Use the latest Ubuntu environment
@@ -34,11 +28,15 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Set build script permissions # NEW STEP: This will fix the permission error
+        run: chmod +x ./node_modules/.bin/vite
+
       - name: Build project
         run: npm run build
 
       - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@4.1.5 # This action is very reliable
+        uses: peaceiris/actions-gh-pages@v3 # Use the peaceiris action for deployment
         with:
-          branch: gh-pages # The branch to deploy to
-          folder: dist # The folder to deploy from
+          github_token: ${{ secrets.GITHUB_TOKEN }} # Use the default token provided by GitHub Actions
+          publish_dir: ./dist # Specify the directory to publish (the 'dist' folder created by the build command)
+          publish_branch: gh-pages # This creates and pushes the content to a 'gh-pages' branch
